--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "vite",
+    "start": "npx http-server -P http://127.0.0.1:${PORT} ./dist",
     "build": "run-p type-check build-only",
     "preview": "vite preview",
     "build-only": "vite build",
